# rustic-agent

./: .env.example  .gitignore  CLAUDE.md  QUICK_START.md  README.md  SECURITY.md  dependency-verification-report.md  package-lock.json  package.json  test-file-explorer.js  validate-fixes.js
.claude/: CLAUDE.md
.claude/commands/: README.md  config-check.md  create-pr.md  dev-checklist.md  docs-check.md  pick-next-feature.md  pick-next-ticket.md  qa-check.md  review-pr.md  security-check.md  start-feature.md  test-review.md  work-on-ticket.md
.claude/docs/: README.md  logging-system-guide.md
docs/: implementation-sequencing.md
scripts/: dev.js  generate-icons.js
src-tauri/: Cargo.toml  hello-world.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  main.rs  security.rs
src-tauri/src/claude/: client.rs  config.rs  connection_pool.rs  constants.rs  error.rs  message.rs  message_processor.rs  mod.rs  model_registry.rs  tool.rs  tools.rs  types.rs  whitelist.rs
src-tauri/src/claude/tools/: chain.rs  execution.rs  feedback.rs  mod.rs  recovery.rs  simple_execution.rs
src-tauri/src/config/: constants.rs  mod.rs  runtime.rs  settings.rs  validation.rs
src-tauri/src/logging/: logger.rs  mod.rs  telemetry.rs  tests.rs
temp-docs/: ampcode-analysis.md  anthropic-technical-specs.md  comprehensive-codebase-analysis.md  comprehensive-review-findings.md  configuration-templates.md  critical-issues-action-plan-corrected.md  critical-issues-action-plan.md  current-vs-target-analysis.md  documentation-update-progress.md  frontend-tech-evaluation.md  github-issue-quality-improvements.md  implementation-docs-progress-dump.md  implementation-roadmap.md  phase-2-3-issue-updates-summary.md  quality-of-life-improvements-plan.md  research-summary.md  tool-event-logging-design.md
ui/: README.md  accessibility-improvements.html  demo.html  index.html
(+49 files in other folders)
