[package]
name = "rustic-agent"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = [ "tray-icon", "devtools"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables (for API keys)
dotenvy = "0.15"

# Additional utilities for API integration
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Path pattern matching for whitelist
glob = "0.3"

# Async trait support
async-trait = "0.1"

# File system watching
notify = "6.1"
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"
